# genetic_algorithm

./: .travis.yml  README.md  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
docs/source/: conf.py  index.rst
genetic_algorithm/: dummy_code.py
genetic_algorithm/tests/: test_dummy_code.py
tests/: context.py  test_dummy_code.py
