[metadata]
name = genetic_algorithm 
summary = Genetic algorithm implementation in Python
description-file =
    README.md
author = Benardi Nunes
author-email = benardinunes@gmail.com
license= MIT
home-page = https://github.com/Benardi/genetic_algorithm 
requires-python = >=3.5
classifier =
    Development Status :: 1 - Alpha
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 1 - Alpha',
    Programming Language :: Python',
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    genetic_algorithm

    
[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html

[pbr]
warnerrors = True

[wheel]
universal = 0 
